--- a/package.json
+++ b/package.json
@@ -77,6 +77,6 @@
     "prop-types": "*",
     "react": "*",
     "react-native": "*",
-    "react-native-video": "^3.2.1",
+    "react-native-video": "^3.2.1"
   }
 }
